[gd_scene load_steps=5 format=3 uid="uid://dtqwk0qopg0vm"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_a1h8d"]
[ext_resource type="Script" path="res://class_regions/methods/methods_region.gd" id="2_g73t7"]
[ext_resource type="Texture2D" uid="uid://b726wqjecdd5u" path="res://UI/linked_nodes.png" id="3_o36l7"]
[ext_resource type="Texture2D" uid="uid://k85kfdwpf731" path="res://UI/magnifying-glass_lorc.png" id="4_pts3m"]

[node name="MethodsRegion" type="PanelContainer"]
theme = ExtResource("1_a1h8d")
script = ExtResource("2_g73t7")
to_implement_icon = ExtResource("3_o36l7")
implemented_icon = ExtResource("4_pts3m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HideShowBtn" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Show/Hide region content"
button_pressed = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SubLabel"
text = "Methods"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemsRoot" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddNewBtn" type="Button" parent="MarginContainer/VBoxContainer/ItemsRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
